examples/test/conf/ref-grant-status/Gateway_edgion-test_internal-gateway.yaml
# Internal Gateway for multi-parent testing
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: edgion-test
spec:
  gatewayClassName: public-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 31260
