examples/test/conf/ref-grant-status/ReferenceGrant_backend_allow-app.yaml
# ReferenceGrant allowing HTTPRoute from 'app' namespace to reference Services in 'backend' namespace
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-app
  namespace: backend
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: app
  to:
    - group: ""
      kind: Service
